--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{61 South 600 East apartment 6 \\ Salt Lake City, Utah 84102 \\ August, 2020} % Your address
+\address{166 A Street \\ Salt Lake City, Utah 84103 \\ May, 2022} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -30,7 +30,10 @@
 \begin{rSection}{Experience}
 
   \begin{rSubsection}{SATCOM and Special Programs, L3Harris}{June 2018 - Present}{Software Engineer}{Salt Lake City, Utah}
-  \item Software Engineer for communications programs for the Department of Defense.
+  \item Performed software engineering duties for a variety of military comms programs at L3Harris Technologies. 
+  \item Responsibilities include the following: development of large and complex C++ projects, assisted with the operation of the team DevOps system, performed extensive linux system administration tasks, TCP/IP socket programming, and played a central role in helping other teams learn how to use Docker and Kubernetes. 
+  \item Experience interfacing directly with the customer as well as program primes and subcontractors. 
+  \item Current software lead for the L3Harris RASOR Program. I was involved in the development of the RASOR system software from the very beginning; I helped define software requirements and architecture for every major component of the RASOR system software and personally supervised development with agile methodologies. I also provided technical assistance to teams that are integrating with or using RASOR in their pursuits. Daily tasks included software development, providing assistance to new engineers on the program, interfacing with the systems engineers, defining requirements, and EVMS reporting.
   \item Possesses an active SECRET security clearance.
   \end{rSubsection}
   
@@ -90,47 +93,22 @@
 
 \end{rSection}
 
-\begin{rSection}{Online}
-
-  \begin{rSubsection}{Linkedin}{}{}{}
-  \item {\href{https://www.linkedin.com/in/DylanJohnson1}{https://www.linkedin.com/in/DylanJohnson1}}
-  \end{rSubsection}
-
-\end{rSection}
-
-% Personal Projects
-%% \begin{rSection}{Personal Projects}
-
-%%   \begin{rSubsection}{Books}{}{}{}
-%%   \item Read the first three chapters of Leslie Lamport's \textit{Specifying Systems}.
-%%   \end{rSubsection}
-
-%% \end{rSection}
-
-% Technical Strengths
-
 \begin{rSection}{Technical Strengths}
 
   {\bf General Programming}
 
   \btab{1.1}{ l l }
-  Currently Used Languages: & C++ and Unix Shell Scripting \\
+  Currently Used Languages: & C++, Go and Unix Shell Scripting \\
   Experience With: & C, C++, Java, Python, Rust, C\#, Javascript, Go, \LaTeX \\
   Version Control Systems: & Git \\
   CI/CD Systems: & Jenkins \\
   \etab
 
-  {\bf Development Enviromnents}
-
-  \btab{1.1}{ l l }
-  IDEs: & Visual Studio \\
-  Text Editors: & Emacs, VI. \\
-  \etab
-
   {\bf Operating Systems}
 
   \btab{1.1}{ l l }
-  Unix: & Linux and MacOS
+  Unix: & Linux (mostly Red Hat Enterprise Linux related distributions) \\
+  Virtualization Technologies: & Extensive experience with Docker and Kubernetes \\
   \etab
 
   {\bf Miscellaneous}
