--- a/resume.tex
+++ b/resume.tex
@@ -34,6 +34,9 @@
   \item Responsibilities include the following: development of large and complex C++ projects, assisted with the operation of the team DevOps system, performed extensive linux system administration tasks, TCP/IP socket programming, and played a central role in helping other teams learn how to use Docker and Kubernetes. 
   \item Experience interfacing directly with the customer as well as program primes and subcontractors. 
   \item Current software lead for the L3Harris RASOR Program. I was involved in the development of the RASOR system software from the very beginning; I helped define software requirements and architecture for every major component of the RASOR system software and personally supervised development with agile methodologies. I also provided technical assistance to teams that are integrating with or using RASOR in their pursuits. Daily tasks included software development, providing assistance to new engineers on the program, interfacing with the systems engineers, defining requirements, and EVMS reporting.
+  \item Developed most of the code for the ATOLL (Automated Tactical Optical Line of sight Links) program during its initial phase. Worked closely with the software lead and systems engineers to accomplish the goals of the program; this meant that I quickly developed broad knowledge of how the system would operate and had a deep knowledge of the software. Made extensive use of C++ 11 and C++ 14 to develop efficient and bug free code. 
+  \item I was also sent to customer visits for the ATOLL program. This involved working with government engineers to test and verify the proper operation of the ATOLL system, feed customer change requests to my software lead, and report bugs. 
+  \item I was initially tasked to do C++ and Docker development on the Cypher program; however, I had to take on linux system administration and devops roles when the pandemic forced our devops engineer to work from home. In addition to my normal software development duties, I ensured that the air-gapped lab network remained functional, managed yum and docker repositories, built cross-compilation toolchains, managed git repositories, and helped other engineers learn how to use Docker and Kubernetes, and worked with many teams from different locations during integration events. 
   \item Possesses an active SECRET security clearance.
   \end{rSubsection}
   
